              square (this is a precondition), and now returns 1 if the
              matrix is detected to be 0-by-0 (although such matrices are
              formally not supported by the Matrix class).
            - You can now multiply a matrix over type T with a matrix or vector
              over type U, where T and U are different types.
        Type safe_tuple_element<...>:
            - New type alias that is like std::tuple_element<...> but
              with well-defined behaviour for an out-of-range index.
        Class Triangulation<dim>:
            - New suite of routines countBoundaryFaces().
            - New suite of public routines dualBoundaryMap() (these were
              previously private, and had a more complex interface).
            - New suite of routines dualToPrimal().
        Class Triangulation<4>:
            - New routine intersectionForm().
            - New optimisations that reduce the need for 3-sphere/3-ball
              recognition when modifying a triangulation.
        Class Vertex<3>:
            - New routine linkingSurface().
        Routine for_constexpr():
            - New routine to support compile-time for loops.
    PYTHON:
        - For classes that have a bool() cast operator, this is now wrapped in
          Python using the special __bool__() function (i.e., Python will now
          cast such objects to bool in the same way).
    UTILITIES:
        tricensus:
            - Now supports multithreading via the new --threads option.
            - Now supports enumerating subcomplexes of triangulations
              via the new option --allowinvalid.
            - The --genpairs option is now much less memory-hungry when the
              automorphism group is large (e.g., with many boundary facets).

Version 7.0  [ 19 December, 2021 ]

    GENERAL:
        - The file format has changed.  It is still XML-based, but older
          versions of Regina will not be able to read files created by